go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: mcp
      protocol: TCP
      port: 8081
      targetPort: 8081
