go/ingress.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - "link.pmh.codes"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: go-service
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-public-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main
      namespace: gateway
  hostnames:
    - "linkapi.pmh.codes"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: go-service
          port: 80
          weight: 1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: go-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: go-route
  oidc:
    provider:
      issuer: "https://auth.pmh.codes/application/o/go/"
      tokenEndpoint: "http://authentik-service.authentik.svc.cluster.local:9000/application/o/token/"
    clientID: "erwP1MS4wHuI8jSFfGdjSOTtPUHxUmhgZvziFX9s"
    clientSecret:
      group: ""
      kind: "Secret"
      name: "go-auth-secrets"
